--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                Bachelors degree in Computer Science Engineering from SRM University.
                Excited for new challenges awaiting me in the future.
             </p>
-            <a href="https://drive.google.com/drive/u/0/my-drive" target="_blank">Download CV</a>
+            <a href="https://drive.google.com/file/d/198Nn5pFb0BxuxEHPWo_PLiReAcx4S-Fm/view?usp=sharing" target="_blank">Download CV</a>
           </div>
         </div>
       </div>
