--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li><a href="#about" class="menu-btn">About</a></li>
           <li><a href="#services" class="menu-btn">Services</a></li>
           <li><a href="#skills" class="menu-btn">Skills</a></li>
-          <li><a href="#contact" class="menu-btn">Contact</a></li>
+          <li><a href="https://devanxh.github.io/portfolio-projects/" class="menu-btn">Projects</a></li>
         </ul>
         <div class="menu-btn">
           <i class="fas fa-bars"></i>
