--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                Bachelors degree in Computer Science Engineering from SRM University.
                Excited for new challenges awaiting me in the future.
             </p>
-            <a href="https://drive.google.com/file/d/198Nn5pFb0BxuxEHPWo_PLiReAcx4S-Fm/view?usp=sharing" target="_blank">Download CV</a>
+            <a href="https://drive.google.com/file/d/1emkBE9jtdjjVYdsAsVOTL4q-m-NT6iCi/view?usp=share_link" target="_blank">Download CV</a>
           </div>
         </div>
       </div>
@@ -139,14 +139,14 @@
             <div class="bars">
               <div class="info">
                 <span>CSS</span>
-                <span>80%</span>
+                <span>90%</span>
               </div>
               <div class="line css"></div>
             </div>
             <div class="bars">
               <div class="info">
                 <span>JavaScript</span>
-                <span>60%</span>
+                <span>90%</span>
               </div>
               <div class="line js"></div>
             </div>
@@ -160,7 +160,7 @@
             <div class="bars">
               <div class="info">
                 <span>C++</span>
-                <span>70%</span>
+                <span>89%</span>
               </div>
               <div class="line mysql"></div>
             </div>
